Спринт 4. Итерация 2.